[design] Overflow bugs on mobile-only pending

--- a/design/style.sass
+++ b/design/style.sass
@@ -59,6 +59,17 @@ a
   align-items: start
   justify-items: center
   display: flex
+  & > nav
+    flex: 1 0 auto
+    padding-left: calc(#{$gutter-width} / 2)
+    padding-right: calc(#{$gutter-width} / 2)
+
+  & > main
+    flex: 1 10 auto
+    overflow-x: hidden
+    min-width: 0
+    padding-left: calc(#{$gutter-width} / 2)
+    padding-right: calc(#{$gutter-width} / 2)
 
 // Mobile: display wrapper as rows; set $gutter-width to half its value
 @media screen and (max-width: $mobile-max)
@@ -67,20 +78,14 @@ a
     row-gap: calc(#{$gutter-width} / 2)
 
     & > nav
-      flex: 1 0 auto
       object-fit: contain
       padding-top: calc(#{$gutter-width} / 4)
       padding-bottom: calc(#{$gutter-width} / 4)
-      padding-left: calc(#{$gutter-width} / 2)
-      padding-right: calc(#{$gutter-width} / 2)
 
     & > main
-      flex: 1 1 auto
       object-fit: contain
       padding-top: calc(#{$gutter-width} / 4)
-      padding-bottom: $gutter-width
-      padding-left: calc(#{$gutter-width} / 2)
-      padding-right: calc(#{$gutter-width} / 2)
+      padding-bottom: calc(#{$gutter-width} / 2)
 
 // Non-mobile: display wrapper as columns
 @media screen and (min-width: $mobile-min)
@@ -89,16 +94,10 @@ a
     column-gap: calc(#{$gutter-width} / 2)
 
     & > nav
-      flex: 1 1 auto
       padding-top: $gutter-width
-      padding-left: calc(#{$gutter-width} / 2)
-      padding-right: calc(#{$gutter-width} / 2)
 
     & > main
-      flex: 1 1 auto
       padding-top: $gutter-width
-      padding-left: calc(#{$gutter-width} / 2)
-      padding-right: $gutter-width
 
 // Common nav
 nav
@@ -141,7 +140,7 @@ nav img#more
   width: calc(0.21622 * #{$nav-height})
 
 nav ul
-  justify-self: start
+  justify-self: flex-start
   margin: 0
   padding-left: 0
   padding-right: 0
